# inf2-probeklausur

./: CMakeLists.txt  README.md
probe_labor/: CMakeLists.txt
probe_labor/aufgaben/: CMakeLists.txt
probe_labor/aufgaben/aufgabe_0/: CMakeLists.txt  aufgabe_0.cpp  aufgabe_0.h
probe_labor/aufgaben/aufgabe_1/: CMakeLists.txt  aufgabe_1.cpp  aufgabe_1.h
probe_labor/aufgaben/aufgabe_2/: CMakeLists.txt  aufgabe_2.cpp  aufgabe_2.h
probe_labor/aufgaben/aufgabe_3/: CMakeLists.txt  aufgabe_3.cpp  aufgabe_3.h
probe_labor/aufgaben/aufgabe_4/: CMakeLists.txt  aufgabe_4.cpp  aufgabe_4.h
probe_labor/aufgaben/aufgabe_5/: CMakeLists.txt  aufgabe_5.cpp  aufgabe_5.h
probe_labor/aufgaben/aufgabe_6/: CMakeLists.txt  aufgabe_6.cpp  aufgabe_6.h
testtools/doctest_setup/: test_functions.cmake
